--- a/package.json
+++ b/package.json
@@ -1,23 +1,52 @@
 {
-  "name": "alpha",
-  "version": "0.1.0",
-  "private": true,
+  "name": "WInster-Investment-Option",
+  "version": "1.1.0",
+  "description": "Crypto currency Investment platform",
+  "main": "home.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  "keywords": [
+    "invest",
+    "investment",
+    "crypto",
+    "crypto currency",
+    "bitcoin",
+    "ethereum",
+    "loans"
+  ],
+  "author": "pedro",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/creativetimofficial/nextjs-material-kit/issues"
+  },
+  "homepage": "/home",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material/react-drawer": "^0.15.0",
+    "@material/react-top-app-bar": "^0.15.0",
+    "@nivo/bar": "^0.73.1",
+    "@nivo/bullet": "^0.73.0",
+    "@nivo/chord": "^0.73.0",
+    "@nivo/core": "^0.73.0",
+    "@nivo/pie": "^0.73.0",
+    "@nivo/radar": "^0.73.0",
+    "@nivo/sunburst": "^0.73.0",
+    "@syncfusion/ej2-react-charts": "^19.2.47",
+    "@syncfusion/ej2-react-layouts": "^19.2.44",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "chart.js": "^3.4.1",
     "cookie": "^0.4.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -27,11 +56,19 @@
     "next": "^10.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.1",
+    "nivo": "^0.31.0",
     "path": "^0.12.7",
+    "rc-drawer": "^4.4.0",
+    "rc-table": "^7.17.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.0.4",
     "react-countup": "^4.4.0",
+    "react-crypto-compare": "^1.3.2",
     "react-dom": "17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-material-ui-carousel": "^2.2.7",
+    "react-modern-drawer": "^0.1.1",
+    "react-spinners": "^0.11.0",
     "react-ts-tradingview-widgets": "^1.0.3",
     "react-waypoint": "^10.1.0",
     "reactstrap": "^8.9.0",
