--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "chart.js": "^3.4.1",
+    "coingecko-api": "^1.0.10",
     "cookie": "^0.4.1",
+    "crypto-chart-react": "^0.2.3",
+    "email-templates": "^8.0.7",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "js-cookie": "^2.2.1",
@@ -55,19 +58,30 @@
     "mongoose-type-email": "^1.1.2",
     "next": "^10.0.7",
     "next-compose-plugins": "^2.2.1",
+    "next-i18next": "^8.5.5",
     "next-images": "^1.8.1",
     "nivo": "^0.31.0",
+    "node-mailjet": "^3.3.4",
+    "nodemailer": "^6.6.3",
+    "nodemailer-juice": "^1.0.1",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "rc-drawer": "^4.4.0",
+    "rc-footer": "^0.6.6",
     "rc-table": "^7.17.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^3.0.4",
+    "react-country-region-selector": "^3.1.0",
     "react-countup": "^4.4.0",
     "react-crypto-compare": "^1.3.2",
+    "react-digital-clock": "^0.1.2",
     "react-dom": "17.0.1",
     "react-google-charts": "^3.0.15",
+    "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.9.5",
     "react-material-ui-carousel": "^2.2.7",
     "react-modern-drawer": "^0.1.1",
+    "react-recaptcha-hook": "^1.2.2",
     "react-spinners": "^0.11.0",
     "react-ts-tradingview-widgets": "^1.0.3",
     "react-waypoint": "^10.1.0",
