--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
     "rc-drawer": "^4.4.0",
     "rc-footer": "^0.6.6",
     "rc-table": "^7.17.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
+    "react-circular-progressbar": "^2.0.4",
     "react-country-region-selector": "^3.1.0",
     "react-countup": "^4.4.0",
     "react-crypto-compare": "^1.3.2",
@@ -81,9 +82,11 @@
     "react-google-recaptcha-v3": "^1.9.5",
     "react-material-ui-carousel": "^2.2.7",
     "react-modern-drawer": "^0.1.1",
+    "react-particles-js": "^3.5.3",
     "react-recaptcha-hook": "^1.2.2",
     "react-spinners": "^0.11.0",
     "react-ts-tradingview-widgets": "^1.0.3",
+    "react-tsparticles": "^1.33.3",
     "react-waypoint": "^10.1.0",
     "reactstrap": "^8.9.0",
     "webpack": "^5.42.0"
