--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "WInster-Investment-Option",
   "version": "1.1.0",
   "description": "Crypto currency Investment platform",
-  "main": "home.js",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/nextjs-material-kit/issues"
   },
-  "homepage": "/home",
+  "homepage": "/index",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -56,7 +56,7 @@
     "js-cookie": "^2.2.1",
     "mongoose": "^5.13.2",
     "mongoose-type-email": "^1.1.2",
-    "next": "^10.0.7",
+    "next": "^11.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^8.5.5",
     "next-images": "^1.8.1",
@@ -76,7 +76,7 @@
     "react-countup": "^4.4.0",
     "react-crypto-compare": "^1.3.2",
     "react-digital-clock": "^0.1.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-google-recaptcha": "^2.1.0",
     "react-google-recaptcha-v3": "^1.9.5",
@@ -89,6 +89,6 @@
     "react-tsparticles": "^1.33.3",
     "react-waypoint": "^10.1.0",
     "reactstrap": "^8.9.0",
-    "webpack": "^5.42.0"
+    "webpack": "^5.51.1"
   }
 }
