changed login and signup nav color

--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "mongoose-type-email": "^1.1.2",
     "next": "^11.1.0",
     "next-compose-plugins": "^2.2.1",
-    "next-i18next": "^8.5.5",
+    "next-i18next": "^8.7.0",
     "next-images": "^1.8.1",
+    "next-translate": "^1.0.7",
     "nivo": "^0.31.0",
     "node-mailjet": "^3.3.4",
     "nodemailer": "^6.6.3",
