--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^8.7.0",
     "next-images": "^1.8.1",
+    "next-intl": "^2.0.1",
     "next-translate": "^1.0.7",
     "nivo": "^0.31.0",
     "node-mailjet": "^3.3.4",
