--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-waypoint": "^10.1.0",
     "reactstrap": "^8.9.0",
     "swr": "^1.0.0",
+    "use-count-up": "^3.0.1",
     "webpack": "^5.51.1"
   }
 }
